Added Java problem 9 solution